Range bar fully covered & time format corrected

--- a/src/index.css
+++ b/src/index.css
@@ -167,8 +167,8 @@ input[type='range']:hover::-ms-thumb {
   input[type='range']::-webkit-slider-thumb {
     background: #ffffff;
     width: 12px;
-    height: 16px;
-    border-radius: 4px;
+    height: 12px;
+    border-radius: 14px;
     cursor: pointer;
     position: relative;
     z-index: 100;
